# microgp3

./: AUTHORS  AUTHORS.md  CMakeLists.txt  CONTRIBUTORS.md  INSTALL  README  README.md  UpdateTeam.pl  UpdateTeam.sh  ugp3_config.h
Contrib/ugp3-extractor/: CMakeLists.txt
Experimental/CMakeQt/: CMakeLists.txt  Main.cc  MainWindow.cc  MainWindow.h
Frontends/thuban/: CMakeLists.txt  MicroGPMainWindow.Constraints.cpp  MicroGPMainWindow.Evolution.cpp  MicroGPMainWindow.Population.cpp  MicroGPMainWindow.cpp  ugp3-constraints.ui  ugp3.ui
Frontends/thuban/sample-files/: constraints-example.xml  constraints.xml
Frontends/thuban/ugp3-gui/: MicroGPVisualizeIndividual.h  README.txt
Frontends/ugp3/: Argument.h  CMakeLists.txt  Program.Run.cc
Libs/Constraints/: BitArrayParameter.cc  CMakeLists.txt  CombinatorialParameter.cc  ConstantParameter.cc  ConstantParameter.h  ConstantParameter.xml.cc  ConstrainingElement.cc  ConstrainingElement.h  Constraints.cc  EnvironmentParameter.h  Epilogue.cc  Epilogue.h  Expression.h  Expression.xml.cc  ExpressionElement.cc  ExpressionElement.h  FloatParameter.cc  FloatParameter.h  Format.cc  GenericMacro.h  GenericSection.xml.cc  InnerLabelParameter.h  IntegerParameter.cc  Macro.h  OuterLabelParameter.cc  OuterLabelParameter.xml.cc  Parameter.cc  Parameter.h  Prologue.cc  Prologue.h  Section.cc  Section.h  SelfRefParameter.cc  StructuralParameter.cc  StructuralParameter.h  SubSection.xml.cc  UniqueTagParameter.cc  UniqueTagParameter.xml.cc
Libs/Shared/: Base.cc  Base.h  CMakeLists.txt  Compat.h  Convert.h  Debug.h  Distances.h  Exception.h  File.h  IContainer.h  IEquatable.h  IString.cc  ITaggable.h  IValidable.h  InfinityString.h  Info.h  LineInformation.cc  Random.cc  RegexMatch.h  Settings.xml.cc  SettingsContext.cc  SettingsContext.xml.cc  SignalHandling.h  StackTrace.cc  StackTrace.h  Tag.cc  Tag.h  Taggable.cc  UniqueIdCounter.cc  Version.h  XMLIFace.h  beta_distribution.h
Libs/Shared/Exceptions/: ArgumentException.h  ArgumentOutOfRangeException.h  SchemaException.h
src/: CMakeLists.txt  GetRevision.sh  GetVersion.pl  MakeBinaryDist.sh  MakeDist.pl  MakeDocs.sh  ugp3_config.h
src/Benchmarks/: bench_groups.yaml  compare_statistics.py
src/Benchmarks/Example/: bench_groups.yaml
src/Contrib/: CMakeLists.txt
src/Contrib/Scripts/: ExtractPopulations.pl
src/Contrib/XMLUpdater/: .project  update_Palmtree_to_Camellia.sh
src/Contrib/ugp3-extractor/: CMakeLists.txt  ugp3-extractor.cc
src/Contrib/ugp3-individual-editor/: MicroGPMainWindow.cpp  README  UserSelection.cc  UserSelection.h  main.cpp  nk-landscapes.constraints.xml  ugp3-individual-editor.pro
src/Contrib/ugp3-population-inspector/: MicroGPEntropicDistanceWindow.cpp  MicroGPMainWindow.h  assembly-status.xml  ugp3-entropic-distance.ui  ugp3-population-inspector.pro  ugp3-population-inspector.ui
src/Experimental/Assimilate/: README.txt  compile.sh  constraints.assembly.xml  individualB.s  population.settings.xml
src/Experimental/CMA-ES/: CMAES.cpp  README.txt  RandomT.h  TimingsT.h  cmaes.c  cmaes.h  evo.c  main.cpp
src/Experimental/CMakeQt/: MainWindow.ui
src/Experimental/DMAB/: fake_eval.lua  main.py  ops.py  policies.py
src/Experimental/EntropicDistance/: OtherMetric.cpp  OtherMetric.h  main.cpp
src/Experimental/FakeEvaluator/: fake.evaluator.pl  ugp3.settings.xml
src/Experimental/LocalSearch/: clean.sh  hs.population.settings.xml
src/Experimental/NSGA-II/: NSGA2Wrapper.cpp  README  moea-population.xml  ugp3.settings.xml
src/Experimental/lampade/: ge_dmab_alternative_reward.csv
src/Frontends/: CMakeLists.txt
src/Frontends/thuban/: CMakeLists.txt  CodeEditor.h  ConstraintsEditor.cpp  ConstraintsEditor.h  MicroGPMainWindow.h  MicroGPSelectOperators.cpp  MicroGPSelectOperators.h  XmlHighlighter.h  main-constraints-editor.cpp  main.cpp  ugp3-constraints-gui.pro  ugp3-gui.pro  ugp3-selectOperators.ui
src/Frontends/ugp3/: Argument.cc  Argument.h  CMakeLists.txt  Main.cc  MicroGPSettings.cc  MicroGPSettings.h  Program.Run.cc  Program.cc  Program.h  ugp3.rc
src/Libs/: CMakeLists.txt
src/Libs/Constraints/: BitArrayParameter.cc  BitArrayParameter.h  BitArrayParameter.xml.cc  CMakeLists.txt  CombinatorialParameter.cc  CombinatorialParameter.h  CombinatorialParameter.xml.cc  ConstantParameter.cc  ConstantParameter.h  ConstantParameter.xml.cc  ConstrainingElement.cc  ConstrainingElement.h  ConstrainingElement.xml.cc  Constraints.cc  Constraints.h  Constraints.xml.cc  DataParameter.cc  DataParameter.h  EnvironmentParameter.cc  EnvironmentParameter.h  EnvironmentParameter.xml.cc  Epilogue.cc  Epilogue.h  Expression.cc  Expression.h  Expression.xml.cc  ExpressionElement.cc  ExpressionElement.h  FloatParameter.cc  FloatParameter.h  FloatParameter.xml.cc  Format.cc  Format.h  Format.xml.cc  GenericMacro.cc  GenericMacro.h  GenericMacro.xml.cc  GenericSection.cc  GenericSection.h  GenericSection.xml.cc  (+33 more)
src/Libs/EvolutionaryCore/: CMakeLists.txt  CandidateSelection.cc  CandidateSelection.h  CandidateSelection.xml.cc  CandidateSolution.cc  CandidateSolution.h  CandidateSolution.xml.cc  ClassicalMigrator.cc  ClassicalMigrator.h  CloneRecord.h  DeltaEntropy.cc  DeltaEntropy.h  EnhancedIndividual.cc  EnhancedIndividual.h  EnhancedIndividual.xml.cc  EnhancedPopulation.cc  EnhancedPopulation.h  EnhancedPopulation.xml.cc  EnhancedPopulationParameters.cc  EnhancedPopulationParameters.h  Entropy.cc  Entropy.h  Evaluator.cc  Evaluator.h  Evaluator.xml.cc  EvaluatorCommon.cc  EvaluatorCommon.h  EvaluatorDispatcher.cc  EvaluatorDispatcher.h  EvaluatorFileDispatcher.cc  EvaluatorFileDispatcher.h  EvaluatorLuaDispatcher.cc  EvaluatorLuaDispatcher.h  EvaluatorLuaWorker.cc  EvaluatorLuaWorker.h  EvolutionaryAlgorithm.cc  EvolutionaryAlgorithm.h  EvolutionaryAlgorithm.xml.cc  EvolutionaryCore.h  Fitness.cc  (+66 more)
src/Libs/Graph/: CGraph.cc  CGraph.h  CGraph.xml.cc  CGraphContainer.cc  CGraphContainer.h  CGraphContainer.xml.cc  CMakeLists.txt  CNode.cc  CNode.h  CNode.xml.cc  CSubGraph.cc  CSubGraph.h  CSubGraph.xml.cc  ConstrainedElement.h  ConstrainedElement.xml.cc  (+18 more)
src/Samples/: README
(+1090 files in other folders)
